lib/src/compiler/tests/testdata/errors/68.out
error: syntax error
 --> line:1:19
  |
1 | rule test { meta: condition: true }
  |                   ^ expected identifier
  |